# teste-candidatura-cilia-tecnologia

./: .gitignore  README.md  pyproject.toml
Dataset-2/: code.ipynb  file-minimal-data.csv
airflow/: docker-compose.yml  entrypoint.sh  fernet.py  secret_key.py  wait-for-postgres.sh
airflow/dags/: local_dag.py  remote_dag.py
airflow/data/: extracted_data.csv  transformed_data.csv
airflow/scripts/: extract.py  extract_file.py  load_csv_to_postgres_airflow.py  send.py  transform.py
docs/Entity-Relationship Diagram/: ERD-for-schema-dataset-1.pgerd
src/: (covid) load-csv-to-postgresql.py  analysis-dataset-1.ipynb  analysis-dataset-2.ipynb  load-csv-to-postgresql.py
src/data/: Dataset-1.7z
src/notebooks/: analysis-dataset-1.ipynb  analysis-dataset-2.ipynb  anl_dataset_1_google_colab.ipynb
src/utils/: (covid) load-csv-to-postgresql.py  (vendas) load-csv-to-postgresql.py
